kustomize/base-java/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: service
spec:
  ports:
    - name: web
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: metrics
      protocol: TCP
      port: 9799
      targetPort: 9799
  selector:
    app: name
  type: ClusterIP
  sessionAffinity: None
